--- a/css/blogs.css
+++ b/css/blogs.css
@@ -1,3 +1,9 @@
+html,body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .blogs {
 	padding: 32px;
 	margin-bottom: 32px;
