--- a/css/destinations.css
+++ b/css/destinations.css
@@ -1,3 +1,9 @@
+html,body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .enquiry {
 	width: 100%;
 	height: 200px;
