--- a/css/nav-section.css
+++ b/css/nav-section.css
@@ -1,3 +1,9 @@
+html,body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .nav-section {
 	padding: 8px;
 	display: flex;
