--- a/css/slideshow-container.css
+++ b/css/slideshow-container.css
@@ -1,3 +1,9 @@
+html,body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 .myslides img {
 	width: 100%;
 	height: 500px;
