--- a/visitnepal.css
+++ b/visitnepal.css
@@ -36,6 +36,10 @@ h3 {
 	padding: 8px;
 }
 
+i {
+	font-size: 24px;
+	color: rgba(255,255,255,1);
+}
 .top > h4 {
 	padding: 0 64px;
 	color: white;
@@ -113,6 +117,7 @@ h3 {
 
 .prev:hover , .next:hover {
 	background-color: black;
+	color: white;
 }
 
 .text {
@@ -246,12 +251,13 @@ select {
 	border-radius: 25px;
 }
 
-.packages a:hover {
+.packages > a:hover {
 	background-color: #0f0;
 }
 
 .package-list {
 	display: flex;
+	position: relative;
 	padding: 0px 0 48px 0;
 }
 
@@ -264,12 +270,25 @@ select {
 	height: 200px;
 }
 
-.list > p{
+.overlay {
+	position: absolute;
+	top: 16px;
 	width: 250px;
-	font-weight: bold;
+	height: 200px;
+	background-color: rgba(0,0,0,0.5);
 }
 
-/*transition to be added required*/
+.overlay > p {
+	padding: 32px;
+}
+
+.details > a {
+	text-decoration: none;
+	color: white;
+	border: 1px solid white;
+	padding: 4px;
+}
+
 /*code for package part done*/
 
 /*code for destination part*/
@@ -298,6 +317,7 @@ select {
 
 .destinations-list {
 	display: flex;
+	position: relative;
 	padding: 0 64px;
 	justify-content: center;
 	padding-bottom: 64px;
@@ -317,11 +337,27 @@ select {
 	border: 2px solid #328432;
 }
 
+.dst {
+	display: none;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	top: 5px;
+	width: 170px;
+	height: 170px;
+	border-radius: 50%;
+	background-color: rgba(0,0,0,0.7);
+	color: white;
+}
+
+#dest:hover .dst {
+	display: flex;
+}
+
 /*code for destination part done*/
 
 /* code for blogs part*/
 .blogs {
-	color: #328432;
 	text-align: center;
 	padding: 32px;
 }
@@ -371,8 +407,8 @@ select {
 }
 
 .bg-list > p {
-	color: grey;
 	padding-top: 8px;
+	opacity: 0.9;
 }
 
 .blog-description {
